--- a/index.html
+++ b/index.html
@@ -2,12 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Garden App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div class="navbar">
+      <a href="#demos">DEMOS</a>
+      <a href="#pages">PAGES</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          SERVICES
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content"></div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">
+          CASE STUDIES
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content"></div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">
+          BLOG
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content"></div>
+      </div>
+
+      <a href="#contactUs">CONTACT US</a>
+    </div>
+    <div>
+      <h1>Landscaping & Gardening</h1>
+    </div>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
