--- a/index.html
+++ b/index.html
@@ -7,37 +7,58 @@
     <title>Garden App</title>
   </head>
   <body>
-    <div class="navbar">
-      <a href="#demos">DEMOS</a>
-      <a href="#pages">PAGES</a>
-      <div class="dropdown">
-        <button class="dropbtn">
-          SERVICES
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content"></div>
-      </div>
+    <div class="main">
+      <div class="main_navbar">
+        <a href="#demos">DEMOS</a>
+        <a href="#pages">PAGES</a>
+        <div class="dropdown">
+          <button class="dropbtn">
+            SERVICES
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content"></div>
+        </div>
 
-      <div class="dropdown">
-        <button class="dropbtn">
-          CASE STUDIES
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content"></div>
-      </div>
+        <div class="dropdown">
+          <button class="dropbtn">
+            CASE STUDIES
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content"></div>
+        </div>
 
-      <div class="dropdown">
-        <button class="dropbtn">
-          BLOG
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content"></div>
-      </div>
+        <div class="dropdown">
+          <button class="dropbtn">
+            BLOG
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content"></div>
+        </div>
 
-      <a href="#contactUs">CONTACT US</a>
+        <a href="#contactUs">CONTACT US</a>
+      </div>
+      <div class="main_content">
+        <h1 class="main_title">Landscaping & Gardening</h1>
+        <div class="main_buttons">
+          <a href="#" class="main__button main__button--green">Get In Touch</a>
+          <a href="#" class="main__button main__button--yellow">Who We Are</a>
+        </div>
+      </div>
     </div>
-    <div>
-      <h1>Landscaping & Gardening</h1>
+    <div class="section">
+      <h2>
+        We Are the Name of the Game When It Comes to Taking Care of Plants
+      </h2>
+      <p>
+        Landscape is a full-service grounds care company. Our established
+        systems allow us to deliver industry-leading lawn care and landscape
+        solutions to commercial and residential clients. Built on a family
+        tradition of caring, we are driven by a passion to exceed customer
+        expectations.
+      </p>
+      <a href="#" class="main__button main__button--green"
+        >Download Our Brochure</a
+      >
     </div>
     <script type="module" src="src/main.js"></script>
   </body>
