--- a/index.html
+++ b/index.html
@@ -60,6 +60,78 @@
         >Download Our Brochure</a
       >
     </div>
-    <script type="module" src="src/main.js"></script>
+    <div class="gallery">
+      <img
+        src="/src/resources/flowers.jpg"
+        onclick="openLightbox(0)"
+        alt="Flowers"
+        class="gallery__image"
+      />
+      <img
+        src="/src/resources/garden1.jpg"
+        onclick="openLightbox(1)"
+        alt="Garden"
+        class="gallery__image"
+      />
+      <img
+        src="/src/resources/plant.jpg"
+        onclick="openLightbox(2)"
+        alt="Plant"
+        class="gallery__image"
+      />
+      <img
+        src="/src/resources/smallPlant.jpg"
+        onclick="openLightbox(3)"
+        alt="Small plant"
+        class="gallery__image"
+      />
+      <img
+        src="/src/resources/vegetable.jpg"
+        onclick="openLightbox(4)"
+        alt="Vegetable"
+        class="gallery__image"
+      />
+      <img
+        src="/src/resources/water.jpg"
+        onclick="openLightbox(5)"
+        alt="Water"
+        class="gallery__image"
+      />
+    </div>
+    <div class="lightbox" id="lightbox">
+      <span class="lightbox__close" onclick="closeLightbox()">&times;</span>
+      <button class="lightbox__prev" onclick="changeImage(-1)">&#10094;</button>
+      <img class="lightbox__content" id="lightboxImage">
+      <button class="lightbox__next" onclick="changeImage(1)">&#10095;</button>
+  </div>
+   
+    </div>
+  <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const images = document.querySelectorAll(".gallery__image");
+    const lightbox = document.getElementById("lightbox");
+    const lightboxImage = document.getElementById("lightboxImage");
+    let currentIndex = 0;
+
+    function openLightbox(index) {
+        currentIndex = index;
+        lightboxImage.src = images[currentIndex].src;
+        lightbox.classList.add("active");
+    }
+
+    function closeLightbox() {
+        lightbox.classList.remove("active");
+    }
+
+    function changeImage(direction) {
+        currentIndex = (currentIndex + direction + images.length) % images.length;
+        lightboxImage.src = images[currentIndex].src;
+    }
+
+    window.openLightbox = openLightbox;
+    window.closeLightbox = closeLightbox;
+    window.changeImage = changeImage;
+});
+    </script>
   </body>
 </html>
